Se cambia proyecto a Java 11 Se unifican clases de estadistica Se actualizan anotaciones JSF usadas en las clases de estadistica Se actualiza consulta de palabra en Metadatos para comparar en mayuscula